--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-tooltip": "^5.29.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "uuid": "^11.1.0",
